# home-automation

./: .dockerignore  .gitignore  CODEOWNER  LICENSE  Makefile  README.md  docker-compose.yaml  go.mod  go.sum
.github/workflows/: dart.yml  go.yml
client/: README.md  analysis_options.yaml  pubspec.yaml
client.app.home/: README.md  pubspec.yaml
client.app.home/lib/: main.dart
client.app.home/web/: index.html
client/lib/: main.dart
client/test/: setup_test.dart
client/web/: index.html  manifest.json
core/api-gateway/: Dockerfile  README.md  config.json  main.go
core/device-registry/: Dockerfile  README.md  main.go
core/user-registry/: Cargo.toml  Dockerfile  main.go
core/user-registry/handler/: user_list.go
service.advertise.ssdp/: Dockerfile  client.js  main.go  package.json
service.api-gateway/: Dockerfile  README.md  config.json  config.yaml  main.go
service.automation.scene/: README.md
service.automation.schedule/: Dockerfile  README.md
service.config/: README.md  dev.config.json  dev.dockerfile  main.go
service.controller.aurora/: Dockerfile  README.md  main.go
service.controller.plug/: README.md  app.js  dev.dockerfile  go.mod  go.sum  main.go  package.json  pubspec.yaml
service.controller.sonoff/: Dockerfile  README.md  main.go
service.controller.sonos/: Dockerfile  README.md  main.go
service.device-registry/: Dockerfile  README.md  app.js  database.js  dev.dockerfile  go.mod  logger.js  main.go  package.json  pubspec.yaml
service.device.registry/: pubspec.yaml
service.schedule/: README.md
tools/: pubspec.yaml
(+296 files in other folders)
