[package]
name = "user-registry"
version = "0.1.0"
authors = ["Cedric Grothues <cedricgrothues@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["macros"] }
warp = "0.2"
serde = "1.0"
serde_json = "1.0"